# dotfiles-tui

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  aarch64.cmake  dotfiles.cpp  main.cpp  make_aarch64.sh  tui.cpp
.cache/clangd/index/: cli.cpp.8A9D55C0F5EBA759.idx  cli.cpp.8AFDA08A673D037F.idx  cli.hpp.401EC26778432DE3.idx  cli.hpp.E61CD5CA6EFA57D9.idx  tui.cpp.465AA53B5F566DAB.idx  tui.cpp.D8CAD780E1DC831D.idx
include/: cli.cpp  cli.hpp  useful.cpp  useful.hpp
src/: main.cpp  tui.cpp  useful.cpp
